--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "koa": "^2.10.0",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "mongodb": "^3.3.3"
   }
 }
