--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.10.0",
+    "koa-body": "^4.1.1",
+    "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "mongodb": "^3.3.3"
+    "mime-types": "^2.1.24",
+    "mongodb": "^3.3.3",
+    "uuid": "^3.3.3"
   }
 }
