--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.559.0",
     "koa": "^2.10.0",
     "koa-body": "^4.1.1",
     "koa-mount": "^4.0.0",
