Simpler deployment script

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "docker build -t 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest .",
-    "ecr-login": "$(aws ecr get-login --no-include-email --region eu-west-2)",
-    "push": "docker push 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest",
-    "deploy": "aws ecs update-service --region eu-west-2 --cluster recipe-runner --service recipe-runner --force-new-deployment"
+    "deploy:docker-build": "docker build -t 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest .",
+    "deploy:docker-login": "$(aws ecr get-login --no-include-email --region eu-west-2)",
+    "deploy:docker-push": "docker push 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest",
+    "deploy:ecs-update": "aws ecs update-service --region eu-west-2 --cluster recipe-runner --service recipe-runner --force-new-deployment",
+    "deploy": "npm run deploy:docker-build && npm run deploy:docker-login && npm run deploy:docker-push && npm run deploy:ecs-update"
   },
   "keywords": [],
   "author": "",
