--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest src",
     "deploy:docker-build": "docker build -t 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest .",
     "deploy:docker-login": "$(aws ecr get-login --no-include-email --region eu-west-2)",
     "deploy:docker-push": "docker push 804715735558.dkr.ecr.eu-west-2.amazonaws.com/recipe-runner:latest",
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.559.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.6.0",
     "koa": "^2.10.0",
     "koa-body": "^4.1.1",
     "koa-mount": "^4.0.0",
@@ -26,5 +28,8 @@
     "mime-types": "^2.1.24",
     "mongodb": "^3.3.3",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
